--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>olulist</title>
 </head>
 <body>
     <h2>Candidate Name</h2>
-    <ol>
+    <ol type="a">
         <li>Rakesh</li>
         <li>Sunil</li>
         <li>Sangeeta</li>
@@ -20,5 +20,23 @@
         <li>Vikas</li>
         <li>Suhas</li>
     </ol>
+
+    <hr>
+
+    <h2>District Name</h2>
+    <ul>
+        <li>Akola</li>
+        <li>Amravati</li>
+        <li>Nagpur</li>
+        <li>Washim</li>
+        <li>Pune</li>
+        <li>Kolhapur</li>
+        <li>Solapur</li>
+        <li>Satara</li>
+        <li>Ratnagiri</li>
+        <li>Raigad</li>
+        <li>Parabhani</li>
+        <li>Thane</li>
+    </ul>
 </body>
 </html>
